docs/examples/azure/demo/podinfo-ingress-ne.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: ne
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.org/redirect-to-https: "true"
  labels:
    app: podinfo
  name: podinfo-ingress
  namespace: podinfo
spec:
  rules:
  - host: podinfo.k8gb.mbcpcloud.lab
    http:
      paths:
      - backend:
          service:
            name: frontend-podinfo
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - podinfo.k8gb.mbcpcloud.lab
